# ultrajson

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .travis_old.yml  BUILD.bazel  LICENSE.txt  MANIFEST.in  MODULE.bazel  Makefile  README  README.md  README.rst  RELEASING.md  pyproject.toml  setup.cfg  setup.py  tox.ini  ultrajson.c  ultrajson.h  ultrajsondec.c  ultrajsonenc.c
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  labels.yml  release-drafter.yml  renovate.json  zizmor.yml
.github/workflows/: benchmark.yml  deploy-macos-windows.yml  deploy-wheels-linux.yml  deploy-wheels-native.yml  deploy-wheels-qemu.yml  deploy-wheels-windows-macos.yml  deploy-wheels.yml  deploy.yml  fuzz.yml  labels.yml  lint.yml  pythonpackage.yml  release-drafter.yml  require-pr-label.yml  test.yml  wheels-Windows-MacOS.yml
.travis/: linux-manywheel.sh
benchmark/: download_data.sh  main.py
dectest/: dectest.vcproj  main.cpp
json_benchmarks/: __main__.py  analysis.py  core.py  datagen.py  libraries.py  measures.py
json_benchmarks/benchmarker/: __init__.py  aggregate.py  benchmarker.py  process_context.py  result_analysis.py  util_json.py  util_stats.py  visualize.py
lib/: Makefile  dconv_wrapper.cc  ultrajson.h  ultrajsondec.c  ultrajsonenc.c
msvc9/: msvc9.sln  msvc9.vcproj
python/: BUILD PYPI RELEASE HOWTO.txt  JSONtoObj.c  MANIFEST  benchmark.py  objToJSON.c  py_defines.h  setup.py  tests.py  ujson.c  ujson.h  version.h  version_template.h
python/lib/: libultrajson.lib  prebuilt.txt  ujson.lib  win32_info.txt
scripts/: Dockerfile_aarch64  build-manylinux-wheels.sh  build-manylinux.py  build-wheels.sh  coverage.sh
src/ujson/lib/: dconv_wrapper.cc  ultrajson.h  ultrajsondec.c  ultrajsonenc.c
src/ujson/python/: JSONtoObj.c  objToJSON.c  ujson.c  version_template.h
tests/: 334-reproducer.json  benchmark.py  benchmark2.py  benchmark3.py  comprehensive.json  conftest.py  fuzz.py  memory.py  sample.json  support.py  test_ft.py  test_json_compat.py  test_ujson.py  tests.py
tests/benchmarker/: __init__.py  _test_ttest.py  aggregate.py  benchmarker.py  process_context.py  result_analysis.py  util_json.py  visualize.py
ujson/: __init__.py
ujson-stubs/: __init__.pyi
