"""
Module: ultrajson
Purpose: Provides the ultrajson library compileable as a Bazel target. Includes tests through Bazel
"""

module(
    name = "ultrajson",
    version = "5.10.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.11")
