[metadata]
name = ujson
description = Ultra fast JSON encoder and decoder for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ultrajson/ultrajson
author = Jonas Tarnstrom
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
download_url = https://github.com/ultrajson/ultrajson
project_urls =
    Source=https://github.com/ultrajson/ultrajson

[options]
python_requires = >=3.7
setup_requires =
    setuptools-scm

[flake8]
max_line_length = 88
