[metadata]
name = ujson
description = Ultra fast JSON encoder and decoder for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ultrajson/ultrajson
author = Jonas Tarnstrom
license_files = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
download_url = https://github.com/ultrajson/ultrajson
project_urls =
    Source=https://github.com/ultrajson/ultrajson

[options]
python_requires = >=3.9
setup_requires =
    setuptools-scm

[flake8]
max_line_length = 88
